::first-letter does not work if used only in shadow content https://bugs.webkit.org/show_bug.cgi?id=220650 <rdar://problem/73477161>

Reviewed by Alan Bujtas.

Source/WebCore:

Test: fast/shadow-dom/shadow-first-line-and-letter.html

We were not setting usesFirstLetter/LinesRules bits if those pseudo-elements were used
only in shadow trees.

Fix by removing the bits. They don't seem to allow any valuable optimizations.

* rendering/LegacyRootInlineBox.cpp:
(WebCore::LegacyRootInlineBox::verticalPositionForBox):
* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::lineHeight const):
(WebCore::RenderBlock::getFirstLetter):
* rendering/RenderInline.cpp:
(WebCore::RenderInline::mayAffectLayout const):
(WebCore::RenderInline::lineHeight const):
* rendering/RenderLineBreak.cpp:
(WebCore::RenderLineBreak::lineHeight const):
* rendering/RenderView.h:
* style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::createAnimatedElementUpdate):
(WebCore::Style::TreeResolver::resolve):

LayoutTests:

Test case by vb@bigdot.de.

* fast/shadow-dom/shadow-first-line-and-letter-expected.html: Added.
* fast/shadow-dom/shadow-first-line-and-letter.html: Added.

Canonical link: https://commits.webkit.org/250030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293497 268f45cc-cd09-0410-ab3c-d52691b4dbfc